[gd_scene load_steps=6 format=3 uid="uid://d0q0vs6hdhjjt"]

[ext_resource type="Script" path="res://levels/bullet_heaven_test.gd" id="1_uc84g"]
[ext_resource type="Texture2D" uid="uid://cpxnp3sv1la1h" path="res://assets/testGrid.png" id="2_2clp6"]
[ext_resource type="Script" path="res://ui/uiManager.gd" id="2_qy4hu"]
[ext_resource type="PackedScene" uid="uid://dwjq7xbomxtuy" path="res://ui/PauseMenu.tscn" id="3_jt05o"]
[ext_resource type="Script" path="res://utils/InputManager.gd" id="4_2uoy2"]

[node name="Level" type="Node2D"]
script = ExtResource("1_uc84g")

[node name="Particles" type="Node" parent="."]

[node name="Enemies" type="Node" parent="."]

[node name="EnemyBullets" type="Node" parent="Enemies"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="UIManager" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 1200.0
offset_bottom = 900.0
script = ExtResource("2_qy4hu")
pauseMenu = ExtResource("3_jt05o")

[node name="Healthbar" type="ProgressBar" parent="UI/UIManager"]
layout_mode = 0
offset_left = 45.0
offset_top = 840.0
offset_right = 495.0
offset_bottom = 880.0
step = 10.0
value = 100.0

[node name="PauseMenu" parent="UI/UIManager" instance=ExtResource("3_jt05o")]
visible = false
layout_mode = 1

[node name="InputManager" type="Node" parent="."]
script = ExtResource("4_2uoy2")

[node name="PlayerBullets" type="Node" parent="."]

[node name="Node" type="Node" parent="."]

[node name="Marker2D" type="Marker2D" parent="Node"]
position = Vector2(-301, 694)

[node name="Background" type="Sprite2D" parent="."]
z_index = -1
texture = ExtResource("2_2clp6")
